# nvidia-freq-scanner

./: Cargo.toml  README.md  build.rs
benchmark-kernel/: CMakeLists.txt  kernel.cu
src/: gui.rs  main.rs  number_input.rs  plotters_iced.rs  test.rs
