[package]
name = "nvidia-scanner"
version = "0.1.0"
authors = ["Aidan Goettsch <aidangoettsch@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nvapi-hi = "0.1.0"
serde = "1.0.117"
serde_json = "1.0.64"
rustacuda = "0.1.2"
rustacuda_core = "0.1.2"
rustacuda_derive = "0.1.2"
