[package]
name = "nvidia-scanner"
version = "0.1.0"
authors = ["Aidan Goettsch <aidangoettsch@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nvapi-hi = "0.1"
rustacuda = "0.1"
rustacuda_core = "0.1"
rustacuda_derive = "0.1"
iced = {version = "0.2", features = ["canvas", "tokio"]}
iced_native = "0.3"
iced_graphics = "0.1.0"
num = "0.4"
plotters = "0.3"
plotters-backend = "0.3"
